--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -196,8 +196,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -506,7 +507,7 @@ SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
 BP_DeskMaster_C.Default=True
-EdGraph.Graph=True
+EdGraph.Graph=False
 EdGraph.Inputs=True
 EdGraph.Outputs=True
 K2Node_FunctionEntry.GraphNodeDetail=True
@@ -835,6 +836,47 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+CineCameraComponent.Variable=True
+CineCameraComponent.TransformCommon=True
+CineCameraComponent.Sockets=True
+CineCameraComponent.Current Camera Settings=True
+CineCameraComponent.CameraOptions=True
+CineCameraComponent.Camera=True
+CineCameraComponent.ComponentTick=True
+CineCameraComponent.PostProcess=True
+CineCameraComponent.Tags=True
+CineCameraComponent.ComponentReplication=True
+CineCameraComponent.Activation=True
+CineCameraComponent.Cooking=True
+CineCameraComponent.Events=True
+CineCameraActor.TransformCommon=True
+CineCameraActor.Camera=True
+CineCameraActor.CameraOptions=True
+CineCameraActor.Current Camera Settings=True
+CineCameraActor.PostProcess=True
+CineCameraActor.Physics=True
+CineCameraActor.Tags=True
+CineCameraActor.AssetUserData=True
+CineCameraActor.Activation=True
+CineCameraActor.Collision=True
+CineCameraActor.Cooking=True
+CineCameraActor.Replication=True
+CineCameraActor.HLOD=True
+CineCameraActor.Networking=True
+CineCameraActor.WorldPartition=True
+CineCameraActor.Actor=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.HLOD=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -861,28 +903,33 @@ K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node="\"Object.PinOptions.PinNames\" "
 EdGraphNode=
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 ActorComponent=
+CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
+CineCameraComponent="\"Object.Current Camera Settings.LensSettings\" \"Object.Current Camera Settings.FocusSettings\" \"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
+CineCameraActor="\"Object.CameraActor.CameraComponent.Object.Current Camera Settings.FocusSettings\" \"Object.Actor.Tags\" "
+CameraActor="\"Object.CameraActor.CameraComponent.Object.Current Camera Settings.FocusSettings\" \"Object.Actor.Tags\" "
+ArrowComponent="\"Object.Tags.ComponentTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem1=/Game/Blueprints/BPC_Desk1
-MRUItem2=/Game/OfficeScene/Maps/tests
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem5=/Game/FirstPerson/Input/Actions/IA_StandUp
-MRUItem6=/Game/Blueprints/BP_DeskMaster
-MRUItem7=/Game/FirstPerson/Input/IMC_Walking
-MRUItem8=/Game/FirstPerson/Input/PMIC_Default
-MRUItem9=/Game/FirstPerson/Input/IMC_Default
-MRUItem10=/Game/FirstPerson/Input/IMC_Weapons
-MRUItem11=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem12=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem13=/Game/Materials/M_HighlightMat
-MRUItem14=/Game/UserInterface/WBP_HUD
+MRUItem0=/Game/Blueprints/BP_DeskMaster
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/Blueprints/BPC_Desk1
+MRUItem3=/Game/UserInterface/WBP_HUD
+MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem5=/Game/OfficeScene/Maps/tests
+MRUItem6=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem7=/Game/FirstPerson/Input/Actions/IA_StandUp
+MRUItem8=/Game/FirstPerson/Input/IMC_Walking
+MRUItem9=/Game/FirstPerson/Input/PMIC_Default
+MRUItem10=/Game/FirstPerson/Input/IMC_Default
+MRUItem11=/Game/FirstPerson/Input/IMC_Weapons
+MRUItem12=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem13=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem14=/Game/Materials/M_HighlightMat
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2079,17 +2126,17 @@ bUseUnsortedMenus=False
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
 BrushComponent=PostProcessVolume.Rendering Features.Rendering Features
-BPC_Desk1_C=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+SceneComponent=
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,
-BillboardComponent=PostProcessVolume.Rendering Features.Rendering Features
+BillboardComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
@@ -2097,14 +2144,18 @@ UserDefinedStruct=UserDefinedStruct.Structure.AE03DC9346529D8EC318B981AF4834A3,U
 BPS_InteractableActorStructure=
 Blueprint=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,
-K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,
 K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+CameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Ray Tracing Global Illumination,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Reflections|Screen Space Reflections,CameraComponent.PostProcess.Reflections|Ray Tracing Reflections,CameraComponent.PostProcess.Reflections,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Rendering Features,
+CineCameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CineCameraComponent.PostProcess.Lens,CineCameraComponent.PostProcess.Lens|Depth of Field,CineCameraComponent.PostProcess.Rendering Features,CineCameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CineCameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CineCameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,
+CineCameraActor=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 
 [PlacementMode]
+RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Game/Blueprints/BPC_Desk1.BPC_Desk1;
 
 [MaterialEditor]
