--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -169,7 +169,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UserInterface
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -193,12 +193,10 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
-OpenAssetsAtExit=/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -901,16 +899,18 @@ Border.Navigation=True
 Border.Localization=True
 Border.Events=True
 WidgetInteractionComponent.LOD=True
+Brush.BrushSettings=True
+Brush.TransformCommon=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 Visual="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
-Object="\"Object.Tags.ComponentTags\" "
+Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -929,9 +929,9 @@ K2Node="\"Object.PinOptions.PinNames\" "
 EdGraphNode=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 CineCameraComponent="\"Object.Current Camera Settings.LensSettings\" \"Object.Current Camera Settings.FocusSettings\" \"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 CineCameraActor="\"Object.CameraActor.CameraComponent.Object.Current Camera Settings.FocusSettings\" \"Object.Actor.Tags\" "
@@ -945,22 +945,24 @@ ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.
 PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UserInterface/WBP_MonitorScreen
-MRUItem1=/Game/Blueprints/BP_DeskMaster
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/Blueprints/BPC_Desk1
-MRUItem4=/Game/UserInterface/WBP_HUD
-MRUItem5=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem6=/Game/OfficeScene/Maps/tests
-MRUItem7=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem8=/Game/FirstPerson/Input/Actions/IA_StandUp
-MRUItem9=/Game/FirstPerson/Input/IMC_Walking
-MRUItem10=/Game/FirstPerson/Input/PMIC_Default
-MRUItem11=/Game/FirstPerson/Input/IMC_Default
-MRUItem12=/Game/FirstPerson/Input/IMC_Weapons
-MRUItem13=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem14=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem15=/Game/Materials/M_HighlightMat
+MRUItem0=/Game/FirstPersonMap
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem2=/Game/Main
+MRUItem3=/Game/UserInterface/WBP_MonitorScreen
+MRUItem4=/Game/Blueprints/BP_DeskMaster
+MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem6=/Game/Blueprints/BPC_Desk1
+MRUItem7=/Game/UserInterface/WBP_HUD
+MRUItem8=/Game/OfficeScene/Maps/tests
+MRUItem9=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem10=/Game/FirstPerson/Input/Actions/IA_StandUp
+MRUItem11=/Game/FirstPerson/Input/IMC_Walking
+MRUItem12=/Game/FirstPerson/Input/PMIC_Default
+MRUItem13=/Game/FirstPerson/Input/IMC_Default
+MRUItem14=/Game/FirstPerson/Input/IMC_Weapons
+MRUItem15=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem16=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem17=/Game/Materials/M_HighlightMat
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1042,7 +1044,7 @@ bHideLevelInstanceContent=True
 bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
+PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/FirstPersonMap.FirstPersonMap", ()))
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1122,7 +1124,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Repos/HotelSimulator/MyProject/Content/FirstPerson/Maps
+UNR=../../../../../Repos/HotelSimulator/MyProject/Content
 BRUSH=../../../../../Repos/HotelSimulator/MyProject/Content/
 FBX=../../../../../Repos/HotelSimulator/MyProject/Content/
 FBXAnim=../../../../../Repos/HotelSimulator/MyProject/Content/
@@ -2157,7 +2159,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
-BrushComponent=PostProcessVolume.Rendering Features.Rendering Features
+BrushComponent=
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,
@@ -2182,10 +2184,11 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AA
 K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-CameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Ray Tracing Global Illumination,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Reflections|Screen Space Reflections,CameraComponent.PostProcess.Reflections|Ray Tracing Reflections,CameraComponent.PostProcess.Reflections,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Rendering Features,
-CineCameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CineCameraComponent.PostProcess.Lens,CineCameraComponent.PostProcess.Lens|Depth of Field,CineCameraComponent.PostProcess.Rendering Features,CineCameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CineCameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CineCameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,
+CameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CameraComponent.PostProcess.Lens
+CineCameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CineCameraComponent.PostProcess.Lens,CineCameraComponent.PostProcess.Lens
 CineCameraActor=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 WidgetInteractionComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+Brush=PostProcessVolume.Rendering Features.Rendering Features,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 
 [PlacementMode]
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
@@ -2367,6 +2370,8 @@ WidgetInteractionComponent.Debugging=True
 GeneralProjectSettings=True
 
 [MRU]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem1=/Game/OfficeScene/Maps/tests
+MRUItem0=/Game/FirstPersonMap
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem2=/Game/Main
+MRUItem3=/Game/OfficeScene/Maps/tests
 
